FEAT: Improve OrgRightsMapper — performance, correctness and observability
- Replace N calls to getSubGroupsStream() with a single lookup map (one
  Keycloak query regardless of how many orgs the user belongs to)
- Use LinkedHashSet instead of HashSet for user groups to preserve
  Keycloak's iteration order and make claim output deterministic
- Add JSpecify @NonNull/@Nullable annotations to all public and
  package-private methods; add jspecify dependency to pom.xml
- Return List.of() from getConfigProperties() instead of new ArrayList<>()
- Add [org-rights]-prefixed DEBUG log statements throughout setClaim so
  the full token-building flow is traceable when debug logging is enabled